added /reminder tests